--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "^16.9.56",
     "@types/react-native": "^0.63.33",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.12.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "prettier": "^2.1.2",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "16.13.1",
     "typescript": "^4.0.5"
